Closes #3 relating to the title issue on small desktop and large mobile.

--- a/resources/css/_header.scss
+++ b/resources/css/_header.scss
@@ -18,7 +18,7 @@ header {
         h1{
             color: $font-color;
             margin-left: 4.5em;
-            @media screen and (max-width: 414px) {
+            @media screen and (max-width: 767px) {
                 display: none;
             }
         }
